# Comp-Matrix-Homoencrypt

./: CMakeLists.txt  README.md  main.cpp
bgv/: bgv.cpp  bgv.h
matrixFullhomo/: matrixfull.cpp  matrixfull.h
matrixSemihomo/: matrix.cpp  matrix.h
paillier/: paillier.cpp  paillier.h
rsa/: rsa.cpp  rsa.h
